Added set address to current location in profile edit

--- a/Food Drlivery/Food Drlivery/Info.plist
+++ b/Food Drlivery/Food Drlivery/Info.plist
@@ -28,5 +28,9 @@
 	<array>
 		<string>armv7</string>
 	</array>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <true/>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <true/>
 </dict>
 </plist>
